# newthinking

./: .gitattributes  .gitignore  README.md  dataprecessing.sh  pyproject.toml  requirements.txt  run_ablation_new.slurm  run_group_e_new.slurm  run_new.slurm  run_smoke_new.slurm
data_splits/: brats_split.json  isic_split.json  msd_liver_split.json
method/: run_method_suite.py  summarize_method_suite.py
src/analysis/: stats.py
src/configs/: brats_group_a.yaml  brats_group_b.yaml  brats_group_c.yaml  brats_group_d.yaml  brats_group_e.yaml  brats_group_r1.yaml  brats_group_r2.yaml  brats_group_r3.yaml  brats_group_r4.yaml  method_suite.yaml
src/configs/experiments/: brats_group_a_supervised.yaml  brats_group_b_mean_teacher.yaml  brats_group_c_frequency.yaml  brats_group_d_prototype.yaml  brats_group_e_full.yaml
src/data/: datasets.py  examples.py  transforms.py
src/engine/: infer.py  trainer.py
src/losses/: contrastive.py  seg_losses.py
src/models/: bayes_teacher.py  diffusion_refiner.py  discriminator.py  hybrid_unet.py  modules.py  seg_model.py
src/scripts/: analyze_stats.py  build_splits.py  collect_epoch_metrics.py  evaluate.py  infer.py  run_ablation.py  run_experiments.py  summarize_results.py  train.py
src/utils/: config.py  frequency.py  metrics.py
