[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "newthinking-semi-supervised-medical-image-segmentation"
version = "0.1.0"
description = "Robust semi-supervised medical image segmentation framework"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "torch>=2.2",
  "torchvision>=0.17",
  "monai>=1.3",

  "numpy>=1.26",
  "scipy>=1.12",
  "scikit-image>=0.22",
  "scikit-learn>=1.4",

  "pandas>=2.2",
  "PyYAML>=6.0",
  "tqdm>=4.66",

  "matplotlib>=3.8",
  "seaborn>=0.13",

  "statsmodels>=0.14",

  "SimpleITK>=2.3",
  "nibabel>=5.2",
  "medpy>=0.5",

  "opencv-python>=4.9",

  "einops>=0.7",

  "tensorboard>=2.16",

  "omegaconf>=2.3",

  "wandb>=0.17",
]

[tool.setuptools.packages.find]
where = ["src"]